--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        </div>
      </header>
 
-     
+
       <main>
         <!--HERO-->
           <section class="hero section">
@@ -82,13 +82,13 @@
           <h2 class="examples-titles"> Чем мы занимаемся</h2>
           <ul class="examples-list">
             <li>
-<img src="./IMG/pic1.jpg" alt="мужчина пишет код" width="370" height="294">
+<img src="./img/pic1.jpg" alt="мужчина пишет код" width="370" height="294">
             </li>
             <li>
-              <img src="./IMG/pic2.jpg" alt="кто-то держит смартфон" width="370" height="294">
+              <img src="./img/pic2.jpg" alt="кто-то держит смартфон" width="370" height="294">
             </li>
             <li>
-              <img src="./IMG/pic3.jpg" alt="кто-то держит планшет" width="370" height="294">
+              <img src="./img/pic3.jpg" alt="кто-то держит планшет" width="370" height="294">
             </li>
           </ul>
         </div>
@@ -100,28 +100,28 @@
           <h2 class="team-title">Наша команда </h2>
           <ul class="team-list">
             <li class="teammate-item">
-<img src="./IMG/teammate1.jpg" alt="игорь улыбается" width="270" height="260">
+<img src="./img/teammate1.jpg" alt="игорь улыбается" width="270" height="260">
 <div class="teammate-content">
 <h3 class="teammate-name">Игорь Демьяненко</h3>
 <p class="teammate-position" lang="en">Product Designer</p>
 </div>
             </li>
             <li class="teammate-item">
-              <img src="./IMG/teammate2.jpg" alt="ольга улыбается" width="270" height="260">
+              <img src="./img/teammate2.jpg" alt="ольга улыбается" width="270" height="260">
               <div class="teammate-content">
 <h3 class="teammate-name">Ольга Репина</h3>
 <p class="teammate-position" lang="en">Frontend Developer</p>
 </div>
             </li>
             <li class="teammate-item">
-              <img src="./IMG/teammate3.jpg" alt="николай улыбается" width="270" height="260">
+              <img src="./img/teammate3.jpg" alt="николай улыбается" width="270" height="260">
               <div class="teammate-content">
 <h3 class="teammate-name">Николай Тарасов</h3>
 <p class="teammate-position" lang="en">Marketing</p>
 </div>
             </li>
             <li class="teammate-item">
-              <img src="./IMG/teammate4.jpg" alt="ольга улыбается" width="270" height="260">
+              <img src="./img/teammate4.jpg" alt="ольга улыбается" width="270" height="260">
               <div class="teammate-content">
 <h3 class="teammate-name">Михаил Ермаков</h3>
 <p class="teammate-position" lang="en">UI Designer</p>
